fix for dashboards not visible on observe module

--- a/saw-web/src/main/javascript/app/common/components/accordionMenu/accordionMenuLink.component.scss
+++ b/saw-web/src/main/javascript/app/common/components/accordionMenu/accordionMenuLink.component.scss
@@ -47,3 +47,8 @@ mat-panel-title.sidenav-mainmenu {
   width: 100%;
   font-weight: 600;
 }
+
+mat-expansion-panel.sidenav-mainmenu {
+  box-shadow: none !important;
+}
+
